[package]
name = "btf2json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "btf2json"
path = "src/lib.rs"

[[bin]]
name = "btf2json"
path = "src/bin/btf2json.rs"

[[bin]]
name = "memscan"
path = "src/bin/mem_scan.rs"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
btf-rs = "=1.1.0"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.10"
goblin = "0.10.5"
log = "0.4.29"
memchr = "2.8.0"
memmap2 = "0.9.10"
regex = "1.12.3"
rust-crypto = "0.2.36"
rust-embed = { version = "8.11.0", features = ["debug-embed"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
